--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
 aiohttp==2.3.7
+alabaster==0.7.10
 astroid==1.6.0
 async-timeout==2.0.0
 attrs==17.4.0
 autopep8==1.3.3
+Babel==2.5.3
+certifi==2018.1.18
 chardet==3.0.4
+docutils==0.14
 idna==2.6
+imagesize==0.7.1
 isort==4.2.15
+Jinja2==2.10
 lazy-object-proxy==1.3.1
+MarkupSafe==1.0
 mccabe==0.6.1
 multidict==3.3.2
 pkg-resources==0.0.0
 pycodestyle==2.3.1
+Pygments==2.2.0
 pylint==1.8.1
+pytz==2017.3
 PyYAML==3.12
+requests==2.18.4
 six==1.11.0
+snowballstemmer==1.2.1
+Sphinx==1.6.6
+sphinxcontrib-httpdomain==1.6.0
+sphinxcontrib-websupport==1.0.1
+urllib3==1.22
 voluptuous==0.10.5
 wrapt==1.10.11
 yarl==0.18.0
