--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ autopep8==1.3.3
 Babel==2.5.3
 certifi==2018.1.18
 chardet==3.0.4
+git+https://github.com/maillol/cricri.git@master
 docutils==0.14
 idna==2.6
 imagesize==0.7.1
@@ -16,6 +17,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 multidict==3.3.2
+pkg-resources==0.0.0
 pycodestyle==2.3.1
 Pygments==2.2.0
 pylint==1.8.1
