CI only executes unittest, no doctest

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
   python:
     - "3.5"
     - "3.6"
-  script:
-    - pytest --doctest-modules asterios --ignore asterios/__main__.py
-    - python -m unittest
+  script: python -m unittest
   install:
     - pip install -r requirements.txt
