--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-aiohttp==2.3.7
+aiohttp==3.1.0
 alabaster==0.7.10
 astroid==1.6.0
-async-timeout==2.0.0
+async-timeout==2.0.1
 attrs==17.4.0
 autopep8==1.3.3
 Babel==2.5.3
@@ -10,13 +10,14 @@ chardet==3.0.4
 git+https://github.com/maillol/cricri.git@master
 docutils==0.14
 idna==2.6
+idna-ssl==1.0.1
 imagesize==0.7.1
 isort==4.2.15
 Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
-multidict==3.3.2
+multidict==4.1.0
 pycodestyle==2.3.1
 Pygments==2.2.0
 pylint==1.8.1
@@ -29,6 +30,6 @@ Sphinx==1.6.6
 sphinxcontrib-httpdomain==1.6.0
 sphinxcontrib-websupport==1.0.1
 urllib3==1.22
-voluptuous==0.10.5
+voluptuous==0.11.1
 wrapt==1.10.11
-yarl==0.18.0
+yarl==1.1.1
