--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aiohttp==3.1.0
+aiohttp-security==0.2.0
 alabaster==0.7.10
 astroid==1.6.0
 async-timeout==2.0.1
 attrs==17.4.0
 autopep8==1.3.3
 Babel==2.5.3
+basicauth==0.4.1
 certifi==2018.1.18
 chardet==3.0.4
 git+https://github.com/maillol/cricri.git@master
