--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.1.0
+aiohttp==3.3.2
 aiohttp-security==0.2.0
 alabaster==0.7.10
 astroid==1.6.0
@@ -9,7 +9,7 @@ Babel==2.5.3
 basicauth==0.4.1
 certifi==2018.1.18
 chardet==3.0.4
-git+https://github.com/maillol/cricri.git@master
+git+https://github.com/maillol/cricri.git@cricri2.0
 docutils==0.14
 idna==2.6
 idna-ssl==1.0.1
@@ -23,6 +23,7 @@ multidict==4.1.0
 pycodestyle==2.3.1
 Pygments==2.2.0
 pylint==1.8.1
+pytest==3.4.2
 pytz==2017.3
 PyYAML==3.12
 requests==2.18.4
