--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ python:
 - '3.5'
 - '3.6'
 script:
-- pytest -p no:python --doctest-modules --ignore asterios/__main__.py --ignore asterios/setup.py
+- pytest -p no:python --doctest-modules asterios/level.py asterios/config_loader/argument_parser.py asterios/config_loader/config_modifiers.py asterios/models/utils.py
 - python -m unittest
 install:
-- pip install -r requirements.txt
+- pip install -r test_requirements.txt
 deploy:
   provider: pypi
   user: maillol
