--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,13 @@
-aiohttp==3.7.3
-aiohttp-pydantic==1.5.1
+aiohttp==3.4.0
 aiohttp-security==0.2.0
-async-timeout==3.0.1
-attrs==20.3.0
+async-timeout==3.0.0
+attrs==18.1.0
 basicauth==0.4.1
 chardet==3.0.4
-idna==2.10
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-multidict==5.0.2
-pydantic==1.7.2
+idna==2.7
+idna-ssl==1.1.0
+multidict==4.3.1
 PyYAML==5.1
 six==1.11.0
-swagger-ui-bundle==0.0.8
-typing-extensions==3.7.4.3
 voluptuous==0.11.5
-yarl==1.6.3
+yarl==1.2.6
